Adding Translation logic and dictionaries for EN & DE

--- a/fresh-tab/src/generic/freshtab.html
+++ b/fresh-tab/src/generic/freshtab.html
@@ -11,6 +11,7 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
         <link href="http://cdn.cliqz.com/libs/animate/animate.css" rel="stylesheet" media="screen" />
         <link href="css/brands.css" rel="stylesheet" media="screen" />
+        <link href="css/main.css" rel="stylesheet" media="screen" />
 
         <!-- settings -->
         <script src="js/settings.js"></script>
@@ -35,7 +36,7 @@
         <script src="js/$.background.js"></script>
         <script src="js/$.utils.js"></script>
         <script src="js/main.js"></script>
-        <link href="css/main.css" rel="stylesheet" media="screen" />
+        <script src="js/translation.js"></script>
 
         <!-- cards -->
         <script src="js/cards/card.js"></script>
@@ -54,55 +55,9 @@
         <script src="js/cards/widgets/tutorial.js"></script>
 
         <script>
-
-            $.getJSON("locale/de/cliqz.json", function (json) {
-                console.log(json); // this will show the info it in firebug console
-            });
-            var GaboUtils = {
-                PREFERRED_LANGUAGE: null,
-                LANGS: {'de': 'de', 'en': 'en', 'fr': 'fr'},
-                getLanguageFromLocale: function (locale) {
-                    return locale.match(/([a-z]+)(?:[-_]([A-Z]+))?/)[1];
-                },
-                getLanguage: function (win) {
-                    return GaboUtils.LANGS[GaboUtils.getLanguageFromLocale(win.navigator.language)] || 'en';
-                },
-                locale: {},
-                currLocale: null,
-                loadLocale: function (lang_locale) {
-
-                    //var ww = Components.classes['@mozilla.org/embedcomp/window-watcher;1']
-                    //                 .getService(Components.interfaces.nsIWindowWatcher);
-                    // The default language
-                    if (!GaboUtils.locale.hasOwnProperty('default')) {
-                        if (GaboUtils) {
-                            $.getJSON("locale/de/cliqz.json", function (json) {
-                                GaboUtils.locale['default'] = json;
-                            });
-                        }
-                    }
-                    if (!GaboUtils.locale.hasOwnProperty(lang_locale)) {
-                        var loc = GaboUtils.getLanguageFromLocale(lang_locale);
-
-                        if (GaboUtils) {
-                            GaboUtils.currLocale = loc;
-                            $.getJSON("locale/" + loc + "/cliqz.json", function (json) {
-                                GaboUtils.locale[loc] = json;
-                            });
-                        }
-                    }
-                },
-                init: function (win) {
-                    if (win && win.navigator) {
-                        // See http://gu.illau.me/posts/the-problem-of-user-language-lists-in-javascript/
-                        var nav = win.navigator;
-                        GaboUtils.PREFERRED_LANGUAGE = nav.language || nav.userLanguage || nav.browserLanguage || nav.systemLanguage || 'en',
-                        GaboUtils.loadLocale(GaboUtils.PREFERRED_LANGUAGE);
-                    }
-                }
+            window.onload = function () {
+                CliqzTranslation.init(window);
             }
-
-            GaboUtils.init(window);
         </script>
     </head>
     <body>
@@ -113,17 +68,17 @@
         <div id="add" tm-click="plus-button"></div>
         <div id="add-popup">
             <div id="add-popup-buttons">
-                <div id="add-popup-shortcut" tm-click="add-popup-shortcut-tab">Shortcut</div>
-                <div id="add-popup-weather" tm-click="add-popup-weather">Weather</div>
-                <div id="add-popup-clock" tm-click="add-popup-clock">Clock</div>
+                <div id="add-popup-shortcut" tm-click="add-popup-shortcut-tab" data-cliqz-localize data-cliqz-localize-key="shortcut"></div>
+                <div id="add-popup-weather" tm-click="add-popup-weather" data-cliqz-localize data-cliqz-localize-key="weather"></div>
+                <div id="add-popup-clock" tm-click="add-popup-clock" data-cliqz-localize data-cliqz-localize-key="clock"></div>
             </div>
             <div id="add-popup-content-shortcut">
                 <div id="add-popup-logo" tm-click="add-popup-shortcut-logo"><div class="cliqz-brands-logo"></div></div>
                 <div id="add-popup-controls">
                     <input id="add-popup-url" tm-focus="add-popup-shortcut-url" tm-blur="add-popup-shortcut-url" class="input" placeholder="url" />
                     <input id="add-popup-title" tm-focus="add-popup-shortcut-name" tm-blur="add-popup-shortcut-name" class="input" placeholder="custom title" />
-                    <div id="add-popup-ok" tm-click="add-popup-ok">OK</div>
-                    <div id="add-popup-cancel" tm-click="add-popup-cancel">Cancel</div>
+                    <div id="add-popup-ok" tm-click="add-popup-ok" data-cliqz-localize data-cliqz-localize-key="ok"></div>
+                    <div id="add-popup-cancel" tm-click="add-popup-cancel" data-cliqz-localize data-cliqz-localize-key="cancel"></div>
                 </div>
             </div>
         </div>
@@ -175,8 +130,8 @@
             <div class="title ellipsis"></div>
             <div class="subtitle url ellipsis"></div>
             <div class="email">
-                <div class="view auth">Click here to log in</div>
-                <div class="view no-unread">You have no unread emails</div>
+                <div class="view auth" data-cliqz-localize data-cliqz-localize-key="login"></div>
+                <div class="view no-unread" data-cliqz-localize data-cliqz-localize-key="email_no_unread"></div>
                 <div class="view unread"></div>
                 <div class="view loader"></div>
             </div>
@@ -210,18 +165,16 @@
         </div>
 
         <div class="card-tutorial prototype">
-            <div class="tip-1 view">Welcome to FreshTab! We've started you off with some of your favorite sites.</div>
-            <div class="tip-2 view">Missing one of your favorites? Check out the "plus" button.</div>
-            <div class="tip-3 view">Add your favorite news site (e.g. spiegel.de) for some special functionality.</div>
-            <div class="tip-4 view">Did you know you can drag the cards to rearrange them?</div>
-            <div class="tip-5 view">See what else the Plus button has to offer... try adding a widget!</div>
-            <div class="tip-6 view">Thanks! We hope you enjoy FreshTab. Hover over the top right corner and click to close. </div>
+            <div class="tip-1 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip1"></div>
+            <div class="tip-2 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip2"></div>
+            <div class="tip-3 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip3"></div>
+            <div class="tip-4 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip4"></div>
+            <div class="tip-5 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip5"></div>
+            <div class="tip-6 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip6"></div>
             <div class="next-tip"></div>
         </div>
 
-        <div class="card-default prototype">
-            This card is no longer supported and can be removed.
-        </div>
+        <div class="card-default prototype" data-cliqz-localize data-cliqz-localize-key="not_supported_card"></div>
 
         <div class="close-button prototype"></div>
 
