Updating the Localisation selector removing Console.Log

--- a/fresh-tab/src/generic/freshtab.html
+++ b/fresh-tab/src/generic/freshtab.html
@@ -68,17 +68,17 @@
         <div id="add" tm-click="plus-button"></div>
         <div id="add-popup">
             <div id="add-popup-buttons">
-                <div id="add-popup-shortcut" tm-click="add-popup-shortcut-tab" data-cliqz-localize data-cliqz-localize-key="shortcut"></div>
-                <div id="add-popup-weather" tm-click="add-popup-weather" data-cliqz-localize data-cliqz-localize-key="weather"></div>
-                <div id="add-popup-clock" tm-click="add-popup-clock" data-cliqz-localize data-cliqz-localize-key="clock"></div>
+                <div id="add-popup-shortcut" tm-click="add-popup-shortcut-tab" data-cliqz-localize-key="shortcut"></div>
+                <div id="add-popup-weather" tm-click="add-popup-weather" data-cliqz-localize-key="weather"></div>
+                <div id="add-popup-clock" tm-click="add-popup-clock" data-cliqz-localize-key="clock"></div>
             </div>
             <div id="add-popup-content-shortcut">
                 <div id="add-popup-logo" tm-click="add-popup-shortcut-logo"><div class="cliqz-brands-logo"></div></div>
                 <div id="add-popup-controls">
                     <input id="add-popup-url" tm-focus="add-popup-shortcut-url" tm-blur="add-popup-shortcut-url" class="input" placeholder="url" />
                     <input id="add-popup-title" tm-focus="add-popup-shortcut-name" tm-blur="add-popup-shortcut-name" class="input" placeholder="custom title" />
-                    <div id="add-popup-ok" tm-click="add-popup-ok" data-cliqz-localize data-cliqz-localize-key="ok"></div>
-                    <div id="add-popup-cancel" tm-click="add-popup-cancel" data-cliqz-localize data-cliqz-localize-key="cancel"></div>
+                    <div id="add-popup-ok" tm-click="add-popup-ok" data-cliqz-localize-key="ok"></div>
+                    <div id="add-popup-cancel" tm-click="add-popup-cancel" data-cliqz-localize-key="cancel"></div>
                 </div>
             </div>
         </div>
@@ -130,8 +130,8 @@
             <div class="title ellipsis"></div>
             <div class="subtitle url ellipsis"></div>
             <div class="email">
-                <div class="view auth" data-cliqz-localize data-cliqz-localize-key="login"></div>
-                <div class="view no-unread" data-cliqz-localize data-cliqz-localize-key="email_no_unread"></div>
+                <div class="view auth" data-cliqz-localize-key="login"></div>
+                <div class="view no-unread" data-cliqz-localize-key="email_no_unread"></div>
                 <div class="view unread"></div>
                 <div class="view loader"></div>
             </div>
@@ -165,16 +165,16 @@
         </div>
 
         <div class="card-tutorial prototype">
-            <div class="tip-1 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip1"></div>
-            <div class="tip-2 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip2"></div>
-            <div class="tip-3 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip3"></div>
-            <div class="tip-4 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip4"></div>
-            <div class="tip-5 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip5"></div>
-            <div class="tip-6 view" data-cliqz-localize data-cliqz-localize-key="onboarding-card-tip6"></div>
+            <div class="tip-1 view" data-cliqz-localize-key="onboarding-card-tip1"></div>
+            <div class="tip-2 view" data-cliqz-localize-key="onboarding-card-tip2"></div>
+            <div class="tip-3 view" data-cliqz-localize-key="onboarding-card-tip3"></div>
+            <div class="tip-4 view" data-cliqz-localize-key="onboarding-card-tip4"></div>
+            <div class="tip-5 view" data-cliqz-localize-key="onboarding-card-tip5"></div>
+            <div class="tip-6 view" data-cliqz-localize-key="onboarding-card-tip6"></div>
             <div class="next-tip"></div>
         </div>
 
-        <div class="card-default prototype" data-cliqz-localize data-cliqz-localize-key="not_supported_card"></div>
+        <div class="card-default prototype" data-cliqz-localize-key="not_supported_card"></div>
 
         <div class="close-button prototype"></div>
 
