--- a/specific/firefox/cliqz@cliqz.com/tests/index.html
+++ b/specific/firefox/cliqz@cliqz.com/tests/index.html
@@ -14,6 +14,7 @@
   <script src="chrome://cliqztests/content/unit/CliqzMsgCenterTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzResultProviders.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
+  <script src="chrome://cliqztests/content/integration/TelemetryTest.js"></script>
   <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
   <script src="chrome://cliqztests/content/integration/CliqzMsgCenterTest.js"></script>
 
