--- a/specific/firefox/cliqz@cliqz.com/tests/index.html
+++ b/specific/firefox/cliqz@cliqz.com/tests/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/chai/chai.js"></script>
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/core.js/client/core.js"></script>
-  <script>//window.TESTS = {};</script>
+  <script>window.TESTS = {};</script>
   <script src="chrome://cliqztests/content/test-helpers.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzHistoryPatternTest.js"></script>
