--- a/specific/iOS/index.html
+++ b/specific/iOS/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<title>developer tool</title>
 <!--		<link rel="icon" href="/tool/skin/cliqz.png" type="image/x-icon">-->
 				<link href="generic/static/skin/brands.css" rel="stylesheet" type="text/css">
