--- a/specific/firefox/cliqz@cliqz.com/tests/index.html
+++ b/specific/firefox/cliqz@cliqz.com/tests/index.html
@@ -19,6 +19,7 @@
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
   <script src="chrome://cliqztests/content/integration/TelemetryTest.js"></script>
   <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
+  <script src="chrome://cliqztests/content/integration/CliqzMsgCenterTest.js"></script>
 
   <style>
     .btn {
