Add missing test + fix qs parsing

--- a/cliqz@cliqz.com/tests/index.html
+++ b/cliqz@cliqz.com/tests/index.html
@@ -12,6 +12,7 @@
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzHistoryPatternTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzMsgCenterTest.js"></script>
+  <script src="chrome://cliqztests/content/unit/CliqzParseUrlTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
   <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
   <script src="chrome://cliqztests/content/integration/CliqzMsgCenterTest.js"></script>
